# windows-simple

./: .gitmodules  CMakeLists.txt  application_list.txt  doxygen.doxygen  project_list.txt
solution-windows/: nfsnode.sln  port.sln  simple.sln
solution-windows/metaseed/: app_simple_helloworld.sln
solution-windows/windows/: app_simple_simple_drawing.sln  app_simple_simple_form.sln
