cmake_minimum_required(VERSION 3.16)
project(app-simple)


include(source/app/_.cmake)





#cmake_minimum_required(VERSION 3.17)
#project(basis)
#
#include(source/app/_.cmake)
#set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_EXTENSIONS OFF)
#message(STATUS "CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
#
#set(SLASHED_OPERATING_SYSTEM "windows")
#set(UNDERSCORE_OPERATING_SYSTEM "windows")
#
#add_compile_options("$<$<CONFIG:DEBUG>:-DDEBUG>")
#
##
##set(default_gpu "gpu_opengl")
##
##
##set(OPERATING_SYSTEM_NAME "windows")
##
##list(APPEND app_common_dependencies acme_windows)
##set(default_node node_windows)
##set(default_draw2d draw2d_gdiplus)
##set(default_imaging imaging_wic)
##set(default_write_text write_text_win32)
##set(default_audio audio_mmsystem)
##set(default_music_midi music_midi_mmsystem)
##
#
#
#
#add_compile_definitions(UNICODE)
#add_compile_definitions(_UNICODE)
#
#
#
#
#
#include_directories(.)
#include_directories($ENV{HOME}/__config)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/source)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/source/app)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/source/app/_include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/source/include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system)
#if(PLATFORM_POSIX)
#   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/operating_system-posix)
#   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/operating_system-posix/_include)
#endif()
#if(WIN32)
#   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/operating_system-windows_common)
#   include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/operating_system-windows_common/_include)
#endif()
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/operating_system-${OPERATING_SYSTEM_NAME})
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/operating_system-${OPERATING_SYSTEM_NAME}/_include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/third-${OPERATING_SYSTEM_NAME}/x64/basis/include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/third-${OPERATING_SYSTEM_NAME}/include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/third-${OPERATING_SYSTEM_NAME}/third/include)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/third-${OPERATING_SYSTEM_NAME}/third/include/include)
#
#
#set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/time-${OPERATING_SYSTEM_NAME}/cmake)
#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/time-${OPERATING_SYSTEM_NAME}/cmake)
#
#
#link_directories(${LIBRARY_OUTPUT_PATH})
#link_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/storage-${OPERATING_SYSTEM_NAME}/library/x64/basis)
#link_directories(${CMAKE_CURRENT_SOURCE_DIR}/operating_system/storage-${OPERATING_SYSTEM_NAME}/third/library/x64/basis)
#
#
##add_subdirectory(source/app/acme)
##add_subdirectory(operating_system/operating_system-windows_common/acme_windows_common)
##add_subdirectory(operating_system/operating_system-windows/acme_windows)
##add_subdirectory(source/console/hello)
##add_subdirectory(source/console/helloearth)
##add_subdirectory(source/app/apex)
##add_subdirectory(operating_system/operating_system-windows_common/apex_windows_common)
##add_subdirectory(operating_system/operating_system-windows/apex_windows)
##add_subdirectory(source/app/crypto_openssl)
##add_subdirectory(source/app/folder_zip)
##add_subdirectory(source/app/aqua)
##add_subdirectory(source/console/hellosolarsystem)
##add_subdirectory(source/console/readlines)
##add_subdirectory(source/app/aura)
##add_subdirectory(operating_system/operating_system-windows_common/aura_windows_common)
##add_subdirectory(operating_system/operating_system-windows/aura_windows)
##add_subdirectory(operating_system/operating_system-windows/node_windows)
##add_subdirectory(operating_system/operating_system-windows/draw2d_gdiplus)
##add_subdirectory(source/app/app)
##add_subdirectory(source/app/just_message_box)
##add_subdirectory(source/app/message_box)
##add_subdirectory(source/app/gpu_opengl)
##add_subdirectory(source/app/shader)
##add_subdirectory(source/app/axis)
##add_subdirectory(source/app/base)
##add_subdirectory(source/app/experience_core)
##add_subdirectory(source/app/experience_tranquillum)
##add_subdirectory(operating_system/operating_system-windows_common/imaging_wic)
##add_subdirectory(operating_system/operating_system-windows/write_text_win32)
##add_subdirectory(source/app/database_sqlite3)
##add_subdirectory(source/app-simple/application)
##add_subdirectory(source/app-simple/box)
##add_subdirectory(source/app-simple/drawing)
##add_subdirectory(source/app/regular_expression_pcre2)
##add_subdirectory(source/app-simple/form)
##add_subdirectory(source/app-simple/notify_drawing)
##add_subdirectory(source/app-simple/change_grub_default_entry)
##add_subdirectory(source/app-complex/drawing)
##add_subdirectory(source/app/bred)
##add_subdirectory(source/app/core)
##add_subdirectory(source/app-core/gcom)
##add_subdirectory(source/app-core/hellomultiverse)
##add_subdirectory(source/app-core/flag)
##add_subdirectory(source/app-cidadedecuritiba/alphaclock)
##add_subdirectory(source/third/id3lib)
##add_subdirectory(source/app-core/audio)
##add_subdirectory(operating_system/operating_system-windows/audio_mmsystem)
##add_subdirectory(source/app-core/audio_resample_swresample)
##add_subdirectory(source/app-core/api_azure)
##add_subdirectory(source/app-core/api_google)
##add_subdirectory(source/app-core/text_to_speech_azure)
##add_subdirectory(source/app-core/text_to_speech_google)
##add_subdirectory(source/app-core/text_to_speech_sapi)
##add_subdirectory(source/app-core/clockverse)
##add_subdirectory(source/app-core/projection)
##add_subdirectory(source/app-core/desk)
##add_subdirectory(source/app-core/api_ca2)
##add_subdirectory(source/app-core/weather)
##add_subdirectory(source/app-core/audio_decode_wave)
###add_subdirectory(source/app-core/audio_resample_ffmpeg)
##add_subdirectory(source/app-core/audioaura)
##add_subdirectory(source/app-core/auraclick)
##add_subdirectory(source/app-core/auratype)
##add_subdirectory(source/app-veriwell/audio_decode_libmpg123)
##add_subdirectory(source/app-core/chronometer)
##add_subdirectory(source/app-core/timer)
##add_subdirectory(source/app-core/todo)
##add_subdirectory(source/app-core/multimedia)
##add_subdirectory(source/app-veriwell/multimedia)
##add_subdirectory(source/app-veriwell/asciimedia)
##add_subdirectory(source/app/experience_anthill)
##add_subdirectory(source/app-veriwell/music_midi_rtmidi)
##add_subdirectory(source/app-veriwell/waven)
##add_subdirectory(source/app-veriwell/video_decode_ffmpeg)
##add_subdirectory(source/app-veriwell/verisimplevideo)
##add_subdirectory(operating_system/operating_system-windows/music_midi_mmsystem)
##add_subdirectory(source/app/compress_zlib)
##add_subdirectory(source/app-veriwell/musical_player_lite)
##add_subdirectory(source/app-veriwell/musical_player)
##add_subdirectory(source/app-veriwell/keyboard)
##add_subdirectory(source/app/programming)
##add_subdirectory(source/app/scripting)
##add_subdirectory(source/app-core/announcecom)
##add_subdirectory(source/app-core/resident)
##add_subdirectory(source/app-core/resident_client)
##add_subdirectory(source/app-core/resident_desktop)
##add_subdirectory(source/app-core/addressbook)
##add_subdirectory(source/app-core/hash_hub)
##add_subdirectory(source/app-core/note)
##add_subdirectory(source/app-core/photo)
##add_subdirectory(source/app-core/picture)
##add_subdirectory(source/game/estamira)
##add_subdirectory(source/game/game_of_life)
##add_subdirectory(source/game/tictactoe)
##add_subdirectory(source/game/tetris)
##add_subdirectory(source/game/arkanoid)
##add_subdirectory(source/game/sokoban)
##add_subdirectory(source/game/pacman)
##add_subdirectory(source/game/coincube)
##add_subdirectory(source/game/arch001)
#
#
#
